export default class RenderManagerInterface {
  reRenderView() {}
  addEvent (onRender) {}
}