export default class SortManagerInterface {
  getSortedEntities (entities) {}
  by(field, reverse = null) {}
}